Allow plugins to say that installation can/cannot be cancelled

For example - it's not safe to cancel a distro package installation
after it has gone past a certain point, or else you'll end up with a
broken system.

Also implement this for the PackageKit plugin by propagating the
allow-cancel property up.

https://bugzilla.gnome.org/show_bug.cgi?id=785515